Workink to Login the user

--- a/Client/index.html
+++ b/Client/index.html
@@ -11,6 +11,12 @@
         text-decoration: none;
         color: inherit;
       }
+      .error{
+        color: rgb(255, 255, 255);
+        margin: 10px;
+        font-size: large;
+
+      }
       
     </style>
   </head>
